Fix styles to remove scrollbars on login page

--- a/public/Less/layouts/login.less
+++ b/public/Less/layouts/login.less
@@ -1,8 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:900);
 
 .login-page {
-  width:100%;
-  height: 100%;
   font-family:@base_font;
   background-color:@body_bg_color;
   display: flex;
